--- a/mandelbulber2/formula/ui/transf_difs_box_v3.ui
+++ b/mandelbulber2/formula/ui/transf_difs_box_v3.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_difs_box_v3</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -499,7 +499,7 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1" colspan="2">
+        <item row="3" column="0" colspan="3">
          <widget class="Line" name="line_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -691,7 +691,7 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1" colspan="2">
+        <item row="3" column="0" colspan="3">
          <widget class="Line" name="line_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -792,27 +792,13 @@
             <number>2</number>
            </property>
            <item row="1" column="1">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledBx_false">
-             <property name="text">
-              <string>iter^2 scale</string>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledO_false">
              <property name="text">
               <string>swap XZ</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0" rowspan="2">
-            <widget class="QLabel" name="label_117">
-             <property name="text">
-              <string>iter. scale:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
+           <item row="2" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
              <property name="text">
               <string>iter scale</string>
@@ -823,20 +809,6 @@
             <widget class="QLabel" name="label_116">
              <property name="text">
               <string>angle scale:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
-             <property name="text">
-              <string notr="true">fabs</string>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="1">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledBy_false">
-             <property name="text">
-              <string>temp</string>
              </property>
             </widget>
            </item>
@@ -868,21 +840,14 @@
              </property>
             </widget>
            </item>
-           <item row="5" column="0">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
+           <item row="1" column="0">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
              <property name="text">
-              <string>temp</string>
+              <string notr="true">fabs</string>
              </property>
             </widget>
            </item>
-           <item row="6" column="1">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledBz_false">
-             <property name="text">
-              <string>sqrd</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1" rowspan="2">
+           <item row="3" column="1" rowspan="4">
             <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_1">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -910,13 +875,10 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="1">
-            <widget class="QFrame" name="frame">
-             <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
-             </property>
-             <property name="frameShadow">
-              <enum>QFrame::Raised</enum>
+           <item row="3" column="0" rowspan="4">
+            <widget class="QLabel" name="label_117">
+             <property name="text">
+              <string>iter. scale:</string>
              </property>
             </widget>
            </item>
